<resources>
    <string name="app_name">Formosa de Cristo</string>
    <string name="hint_password">Digite sua senha...</string>
    <string name="hint_cpf">Digite seu CPF...</string>
    <string name="cpf">CPF</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="criar">Criar</string>
    <string name="enviar">Enviar</string>
    <string name="menu_header">Menu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nome">Nome</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="telefone">Telefone</string>
    <string name="cep">CEP</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="estado">Estado</string>
    <string name="cadastro">Membro desde:</string>
    <string name="batizado">Batizado:</string>
    <string name="departamento">Departamento:</string>
    <string name="escolaridade">Escolaridade:</string>
    <string name="instituicao">Instituição</string>
    <string name="curso">Curso</string>
    <string name="buscar">Buscar</string>
    <string name="ok">OK</string>
    <string name="novo_usuario">Novo Usuário?</string>
    <string name="nova_senha">Esqueceu a Senha?</string>
    <string name="login">Login</string>

    <string name="hint_nome">Digite seu nome</string>
    <string name="hint_email">Digite seu e-mail</string>
    <string name="hint_cep">Digite seu CEP</string>
    <string name="hint_endereco">Exemplo: Rua Augusta, Avenida Paulista</string>
    <string name="hint_complemento">Exemplo: Bloco 01 Apto 02</string>
    <string name="hint_cidade">Exemplo: Santo André</string>
    <string name="hint_bairro">Exemplo: Parque Jaçatuba</string>
    <string name="hint_data">Selecione a Data</string>
    <string name="hint_selecione">Selecione</string>
    <string name="hint_instituicao">Exemplo: UFABC</string>
    <string name="hint_curso">Exemplo: Administração</string>
    <string name="hint_senha">A senha deve conter no mínimo 6 caracteres</string>
    <string name="hint_forgot_password">Digite o e-mail cadastrado para a redefinição de senha.</string>

    <string name="departamento_obreiros">Obreiros</string>
    <string name="departamento_louvor">Louvor</string>
    <string name="departamento_jovens">Jovens</string>
    <string name="departamento_med">MED</string>
    <string name="departamento_bercario">Berçário</string>
    <string name="departamento_som">Som</string>
    <string name="departamento_multimidia">Multimídia</string>
    <string name="departamento_voluntarios">Voluntários</string>
    <string name="departamento_projsocial">Projeto Social</string>

    <string name="valid_cep">CEP em branco.</string>
    <string name="error_cep">CEP inválido.</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="default_notification_channel_name">default_notification_channel_name</string>
    <string name="fcm_message">fcm_message</string>

    <string name="msg_login_sucesso">Login realizado com sucesso.</string>
    <string name="msg_login_falha">E-mail ou senha inválido.</string>
    <string name="msg_novo_usuario_sucesso">Usuário cadastrado com sucesso.</string>
    <string name="msg_novo_usuario_falha">Ocorrei uma falha ao cadastrar seu usuário</string>
    <string name="msg_logout_sair_titulo">Sair</string>
    <string name="msg_logout_sair_msg">Você tem certeza que deseja sair?</string>
    <string name="msg_email_branco">Favor preencher o e-mail.</string>
    <string name="msg_senha_branco">Favor preencher a senha.</string>
    <string name="msg_email_invalido">E-mail inválido.</string>
    <string name="msg_senha_invalido">Senha deve conter pelo menos 6 caracteres.</string>
    <string name="msg_error_network">Erro ao logar. Verifique a sua conexão.</string>
    <string name="msg_forgot_password">Um e-mail foi enviado para a definição de uma nova senha.</string>
    <string name="msg_campo_obrigatorio">Campo obrigátorio.</string>


    <string name="menu_perfil">Meus Dados</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_logout">Sair</string>

    <string name="tag_login">LoginActivity</string>

    <string-array name="estado_civil_array">
        <item>Selecione..</item>
        <item>Solteiro(a)</item>
        <item>Casado(a)</item>
        <item>Separado(a)</item>
        <item>Divorciado(a)</item>
        <item>Viúvo(a)</item>
    </string-array>
    <string-array name="estado_array">
        <item>UF</item>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

    <string-array name="sim_nao">
        <item>Selecione..</item>
        <item>Sim</item>
        <item>Não</item>
    </string-array>

    <string-array name="escolaridade_array">
        <item>Selecione..</item>
        <item>Fundamental Incompleto</item>
        <item>Fundamental Completo</item>
        <item>Médio Incompleto</item>
        <item>Médio Completo</item>
        <item>Superior Incompleto</item>
        <item>Superior Completo</item>
        <item>Pós Graduação</item>
        <item>Doutorado</item>
        <item>Mestrado</item>
    </string-array>
</resources>
