<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecundary"

    tools:context=".activity.LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_foto"
        android:layout_width="@dimen/icon_login_width"
        android:layout_height="@dimen/icon_login_height"
        android:layout_marginTop="@dimen/icon_login_margin_top"
        android:src="@drawable/iconifc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCPF"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:text="@string/cpf"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_foto" />

    <com.ifcapp.ifcapp.componentes.CpfEditText
        android:id="@+id/edtCpfCnpj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:inputType="number"
        android:singleLine="true"
        android:hint="@string/hint_cpf"
        android:textSize="@dimen/dimen_13dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textViewCPF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSenha"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/edtCpfCnpj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:hint="@string/hint_password"
        android:textSize="@dimen/dimen_13dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textViewSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextSenha" />

</android.support.constraint.ConstraintLayout>